--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 						<a class="links" href="clients.html">Клиентам</a>
 						<a class="links" href="employees.html">Наши сотрудники</a>
 						</nav>
-						<a href="#" class="menu-btn">
+						<a class="menu-btn">
 						<span></span>
 						</a>
 					</div>
@@ -39,7 +39,7 @@
 		</div>
 		<div class="right">
 			<div class="business">Время открыть <br><b>бизнес!</b></div>
-			<a href="#" class="hero-btn">Зарегистрироваться</a>
+			<a class="hero-btn">Зарегистрироваться</a>
 		</div>
 	</section>
 
