--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 				<input type="name" placeholder="Имя" id="name" required>
 				<input type="text" placeholder="Телефон" id="tel" required>
 				<input type="email" placeholder="E - mail" required>
-				<button href="#" class="send">Отправить</button>
+				<button class="send">Отправить</button>
 			</div>
 		</div>
 	</section>
