--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
 <body>
 	<header>
 		<div class="container">
-			<a class="logo" href="index.html" src="">
+			<a class="logo" href="index.html">
 				<img src="./image/logo.svg" alt="">
 				<h3>ПСКБ <br> БАНК</h3>
 			</a>
