--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
 				<div class="bank">Заявка на регистрацию</div>
 			</div>
 			<div class="form">
-				<input type="name" placeholder="Имя" id="name" required>
-				<input type="text" placeholder="Телефон" id="tel" required>
-				<input type="email" placeholder="E - mail" required>
+				<input id="name">
+				<input id="tel">
+				<input>
 				<button class="send">Отправить</button>
 			</div>
 		</div>
