--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		</div>
 	</header>
 
-	<section class="hero">
+	<div class="hero">
 		<div class="left">
 			<img src="./image/card.svg" alt="">
 		</div>
@@ -41,9 +41,9 @@
 			<div class="business">Время открыть <br><b>бизнес!</b></div>
 			<a class="hero-btn">Зарегистрироваться</a>
 		</div>
-	</section>
+	</div>
 
-	<section class="container">
+	<div class="container">
 		<div class="bank_info">
 			<div class="bank">
 				<b>Надежный банк из Санкт-Петербурга!</b>
@@ -63,9 +63,9 @@
 				<div class="info_dignity">27 лет <br> на рынке <br> банковских услуг</div>
 			</div>
 		</div>
-	</section>
+	</div>
 	
-	<section class="registration">
+	<div class="registration">
 		<div class="container_registr">
 			<div class="bank_info">
 				<div class="bank">Заявка на регистрацию</div>
@@ -77,7 +77,7 @@
 				<button class="send">Отправить</button>
 			</div>
 		</div>
-	</section>
+	</div>
 
 	<footer>
 		<p class="copyright">Made with ♡ for great people. © All rights reserved. Designed by Vdovichenko Timofey 2022</p>
