--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
 				<div class="bank">Заявка на регистрацию</div>
 			</div>
 			<div class="form">
-				<input id="name">
-				<input id="tel">
-				<input>
+				<input placeholder="Имя" id="name">
+				<input placeholder="Телефон" id="tel">
+				<input placeholder="E-mail">
 				<button class="send">Отправить</button>
 			</div>
 		</div>
