--- a/clients.html
+++ b/clients.html
@@ -50,7 +50,7 @@ $('.menu-nav').toggleClass('menu-nav_active');
 			
 			<div class="slider">
 				<div class="slider_line">
-					<img src="image/baner.jpeg">
+					<img src="image/baner.jpeg" alt="">
 					<img src="image/banner_sbp.jpeg" alt="">
 					<img src="image/payments.jpeg" alt="">
 				</div>
