--- a/employees.html
+++ b/employees.html
@@ -44,38 +44,38 @@
 		</div>
 		<div class="wrapper">
 			<div class="box">
-				<img src="./image/banker.jpg" class="foto">
+				<img src="./image/banker.jpg" class="foto" alt="">
 				<div class="subtitle">Банкир</div>
 			</div>
 			<div class="box">
-				<img src="./image/analyst.jpg" class="foto">
+				<img src="./image/analyst.jpg" class="foto" alt="">
 				<div class="subtitle">Финансовый аналитик</div>
 			</div>
 			<div class="box">
-				<img src="./image/invest.jpg" class="foto">
+				<img src="./image/invest.jpg" class="foto" alt="">
 				<div class="subtitle">Специалист по инвестициям</div>
 			</div>
 			<div class="box">
-				<img src="./image/credit.jpg" class="foto">
+				<img src="./image/credit.jpg" class="foto" alt="">
 				<div class="subtitle">Кредитный эксперт</div></div>
 			<div class="box">
-				<img src="./image/clearing.jpg" class="foto">
+				<img src="./image/clearing.jpg" class="foto" alt="">
 				<div class="subtitle">Специалист по клирингу</div>
 			</div>
 			<div class="box">
-				<img src="./image/auditor.jpg" class="foto">
+				<img src="./image/auditor.jpg" class="foto" alt="">
 				<div class="subtitle">Аудитор</div>
 			</div>
 			<div class="box">
-				<img src="./image/accountant.jpg" class="foto">
+				<img src="./image/accountant.jpg" class="foto" alt="">
 				<div class="subtitle">Бухалтер</div>
 			</div>
 			<div class="box">
-				<img src="./image/teller.jpg" class="foto">
+				<img src="./image/teller.jpg" class="foto" alt="">
 				<div class="subtitle">Операционист</div>
 			</div>
 			<div class="box">
-				<img src="./image/cashier.jpg" class="foto">
+				<img src="./image/cashier.jpg" class="foto" alt="">
 				<div class="subtitle">Кассир</div>
 			</div>
 		</div>
